--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -5,7 +5,7 @@
     box-sizing: border-box
     margin: 0
     padding: 0
-    font-family: sans-serif
+    font-family: Josefin Sans sans-serif
     text-decoration: none
     list-style: none
 
@@ -21,6 +21,9 @@ body
         @include mixins.container
         display: flex
         justify-content: space-between
+        @include mixins.mobile
+            padding: 1.1rem
+
 
         &-brand //.header-brand
             color: variables.$primary-color
@@ -32,6 +35,8 @@ body
                 @include mixins.flex-center
                 gap: 1.5rem
                 height: 100%
+                @include mixins.mobile
+                    display: none
             
                 li
                     margin: 0 1ren
@@ -51,6 +56,8 @@ body
                 @include mixins.flex-center
                 height: 100%
                 color: blue
+                @include mixins.mobile
+                    display: none
 
                 li
                     margin: 0 0.5rem
@@ -73,6 +80,11 @@ body
             width: 31%
             height: 250px
             margin-bottom: 4%
+            border-radius: 10px
+            @include mixins.mobile
+                flex-direction: column
+
+                width: 100%
 
             &-title
                 font-size: 2rem
